# OpenAnonymiser_light

./: .env.example  .gitignore  .trivyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.classic  Dockerfile.gpu  README.md  api.py  docker-compose.yaml  pyproject.toml
.claude/: file-write-allowlist
.claude/scripts/: agent-notify.sh  build-log.sh  security-scan.sh
.github/workflows/: benchmark.yml  docker-build.yml  feature-testing.yml  retag-image.yml
argocd/: applicationset.yaml
benchmarks/: README.md  evaluate.py  evaluator.py  generate_dataset.py  plotter.py  thresholds.yaml  validate_dataset.py
benchmarks/data/: dutch_edge_cases_dataset.json  dutch_generated_dataset.json  dutch_pii_sentences.json  dutch_synth_multi_entity_dataset.json
benchmarks/data/generators/: edge_cases.py  entities.py  templates.py
benchmarks/generators/: edge_cases.py  entities.py  templates.py
benchmarks/label_maps/: gliner_patterns.yaml  spacy_patterns.yaml
docs/: 01-getting-started.md  02-api-reference.md  03-configuration.md  04-deployment.md
docs/architecture/: entity-contract.md  flavors.md
k8s/base/: deployment.yaml  ingress.yaml  service.yaml
k8s/overlays/acc/: basic-auth.auth.example  config.env  kustomization.yaml
k8s/overlays/dev/: config.env  kustomization.yaml
k8s/overlays/prod/: basic-auth.auth.example  config.env  kustomization.yaml
openspec/changes/strip-to-text-only/: tasks.md  (+2 more)
scripts/: check_deps.py  pre-push.sh  setup-dockerhub-secrets.sh
src/api/: .env.example  config.py  dtos.py  main.py  plugins.classic.yaml  plugins.gpu.yaml  plugins.yaml
tests/: conftest.py  test_string_endpoints.py  test_supported_entities.py  test_usecases.py
tests/golden/: README.md  dataset.jsonl  runner.py
tests/harness/: README.md  compose.yaml  conftest.py  test_option_1_classic.py  test_option_2_gpu.py
(+11 files in other folders)
